@@ -14,17 +14,26 @@
     <sonar.java.source>17</sonar.java.source>
   </properties>
   <dependencies>
-    <dependency>
-      <groupId>org.openjfx</groupId>
-      <artifactId>javafx-controls</artifactId>
-      <version>${javafx.version}</version>
-    </dependency>
+    <!-- Eliminat duplicatul de aici, ramane cel de jos cu versiunea 22.0.1 -->
 
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
       <version>${junit.version}</version>
       <scope>test</scope>
+    </dependency>
+
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>3.12.4</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-junit-jupiter</artifactId>
+        <version>3.12.4</version>
+        <scope>test</scope>
     </dependency>
 
 
@@ -70,6 +79,21 @@
 
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.5.0</version>
+            <configuration>
+                <argLine>
+                    -XX:+EnableDynamicAgentLoading -Xshare:off
+                    --add-opens drinkshop/drinkshop.repository=ALL-UNNAMED
+                    --add-opens drinkshop/drinkshop.domain=ALL-UNNAMED
+                    --add-opens drinkshop/drinkshop.service=ALL-UNNAMED
+                    --add-opens drinkshop/drinkshop.service.validator=ALL-UNNAMED
+                </argLine>
+            </configuration>
+        </plugin>
+        
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-failsafe-plugin</artifactId>
             <version>2.22.1</version>
         </plugin>
@@ -87,6 +111,16 @@
             <configuration>
                 <effort>Max</effort>
                 <threshold>Low</threshold>
+            </configuration>
+        </plugin>
+
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.11.0</version>
+            <configuration>
+                <source>17</source>
+                <target>17</target>
             </configuration>
         </plugin>
 
